# audio-channel-mapping

./: .gitignore  @sync_translations.py  @update_version.py  @打包.bat  @打包_nuitka.bat  GUI.py  GUI.pyw  GUI.spec  Protocol.md  README.md  README_EN.md  README_TW.md  a_mapping.py  a_server.py  a_shared.py  a_smtc.py  a_volume.py  audio.py  ja.qm  latency_test.py  pyproject.toml  requirements.txt  sync_translations.py  version.txt  zh-Hans-CN.qm  zh-Hant-TW.qm  打包.bat  抽取ts.bat
audio_mapping/: a_mapping.py  a_server.py  a_smtc.py  a_volume.py  chromecast.py  mapping.py  openrgb.py  server.py  shared.py  smtc.py  volume.py
language/: @編譯ts.bat  ar.qm  ar.ts  bn.qm  bn.ts  es.qm  es.ts  fr.qm  fr.ts  hi.qm  hi.ts  ja.qm  ja.ts  ko.qm  ko.ts  pt.qm  pt.ts  ru.qm  ru.ts  translations.ts  zh-Hans-CN.qm  zh-Hans-CN.ts  zh-Hant-TW.qm  zh-Hant-TW.ts
